# pylibcdr

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
libcdr/: README.md  configure.ac
libcdr/src/lib/: libcdr_utils.h
pylibcdr/: CMakeLists.txt  __init__.py  libcdr_interface.cpp  libcdr_interface.pyx  pylibcdr.cpp  pylibcdr.pyx
pylibcdr/cmake/: Findlibcdr.cmake  Findlibrevenge.cmake
pylibcdr/core/: cdr_iface.cxx  cdr_iface.h  parser.cxx
